added font-awesome to index page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700' rel='stylesheet' type='text/css'>
+  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
   <meta charset="utf-8" />
   <title>Scopitone Jukebox</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
