--- a/auroratone.html
+++ b/auroratone.html
@@ -40,7 +40,7 @@
           videoId: 'uFXku4MntpY',
           playerVars: {
             controls: 0,
-            disablekb: 1
+            loop: 1
           },
           events: {
             'onReady': onPlayerReady,
