--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700' rel='stylesheet' type='text/css'>
   <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
   <meta charset="utf-8" />
   <title>Scopitone Jukebox</title>
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
@@ -17,13 +18,13 @@
           <div id="player">
           </div>
         </div>
-    <h1>Scopitone party</h1> 
+    <h4>Scopitone party</h4> 
       </div>
     </div>
   </div>
     <div id="footer">
       <br />
-      <p><a href="auroratone.html">chillax</a></p>
+    <a href="auroratone.html">chillax instead</a>
     </div>
   </div>
 
@@ -78,7 +79,8 @@
           videoId: get_random_vid(),
           playerVars: {
             controls: 0,
-            disablekb: 1
+            showinfo: 0,
+            loop: 1
           },
           events: {
             'onReady': onPlayerReady,
