integrating parallax nav bar, a work in progress

--- a/index.html
+++ b/index.html
@@ -1,32 +1,88 @@
 <!DOCTYPE html>
 <html>
-
 <head>
+
   <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700' rel='stylesheet' type='text/css'>
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <script type="text/javascript" src="http://twitter.github.com/bootstrap/assets/js/bootstrap-dropdown.js"></script>
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+
   <meta charset="utf-8" />
   <title>Scopitone Jukebox</title>
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+
+
+<!--   <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.css" /> -->
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/scrolling.scss" />
+
+  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js">
+  </script>
+  <script src="js/scrolling.js" type="text/javascript" ></script>
+
+
 
 </head>
 
-  <body>
-    <div id="wrapper">
-      <div id="main">
-        <div class="video-container">
-          <div id="player">
+
+<!-- Fixed navbar -->
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <div class="small-logo-container">
+            <a class="small-logo" href="#">↥Small Logo</a>
           </div>
         </div>
-    <h4>Scopitone party</h4> 
+        <div class="navbar-collapse collapse">
+          
+          <ul class="nav navbar-nav navbar-right">
+            <li class="active"><a href="#">Active</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+          </ul>
+        </div><!--/.nav-collapse -->
       </div>
     </div>
-  </div>
-    <div id="footer">
-      <br />
-    <a href="auroratone.html">chillax instead</a>
-    </div>
-  </div>
+
+    <div class="container-fluid big-logo-row">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 big-logo-container">
+            <h1 class="big-logo">↧Big Logo</h1>
+          </div><!--/.col-xs-12 -->
+        </div><!--/.row -->
+      </div><!--/.container -->
+    </div><!--/.container-fluid -->
+
+
+  <body>
+      <div id="wrapper">
+        <div id="main">
+          <div class="video-container">
+            <div id="player">
+            </div>
+          </div>
+        </div>
+      </div>
+
+ <p>
+Run sleep in the sink jump feed me, kittens leap bat eat chase the red dot purr. Attack chuf meow sleep in the sink leap biting, purr judging you lay down in your way attack your ankles. Meow leap hairball I don't like that food, give me fish leap attack your ankles knock over the lamp eat litter box sleep in the sink sleep on your keyboard. Catnip bat attack your ankles fluffy fur sniff, climb the curtains sleep in the sink zzz attack your ankles sleep in the sink attack kittens. Claw hairball leap purr, feed me rip the couch climb the curtains climb the curtains jump fluffy fur catnip puking. Hairball jump claw zzz claw I don't like that food, jump on the table purr fluffy fur chuf claw toss the mousie. Chase the red dot jump on the table lay down in your way jump on the table attack your ankles, stuck in a tree climb the curtains scratched run stuck in a tree.
+</p><p>
+Bat sleep in the sink give me fish sunbathe, chuf lick run give me fish rip the couch hiss I don't like that food. Lay down in your way fluffy fur shed everywhere claw, sleep in the sink chuf jump on the table climb the curtains rip the couch rip the couch stretching. Attack your ankles scratched attack your ankles stretching eat, purr eat the grass lick stretching knock over the lamp chuf. Attack your ankles rip the couch jump lay down in your way kittens, stretching feed me stuck in a tree bat sleep on your keyboard. Knock over the lamp kittens catnip lick jump stretching, claw toss the mousie chase the red dot lick meow. Sleep on your keyboard lick kittens kittens catnip, fluffy fur catnip bat attack stretching stretching meow.
+</p><p>
+Judging you I don't like that food catnip chuf kittens, litter box litter box sleep on your face hiss jump on the table. Eat kittens purr biting give me fish shed everywhere, attack your ankles kittens sleep in the sink ri</p><p>p the couch. Zzz knock over the lamp give me fish stuck in a tree, sniff rip the couch eat claw hiss I don't like that food knock over the lamp climb the cur</p><p>tains. Attack your ankles claw sleep in the sink sleep on your face, run sniff eat lick sleep</p><p> in the sink tail flick. Jump on the table rip the couch hairball sleep on your keyboard tail flick sunbathe, toss the mousie hairball lay down in your way jump on the table. Rip the couch eat sleep in the sink biting feed me bat, stretching hiss sleep in the sink sleep on your keyboard bat I don't like that food. C</p><p>limb the curtains lay down</p><p> in your way litter box jump, I don't like that food lick scratched knock over the lamp lick claw feed me.
+</p><p>
+Run rip the couch litter box tail flick chuf sunbathe, hairball shed everywhere puking sunbathe. Chase the red dot scratched sniff toss the mousie attack your ankles, sleep in the sink bat lick give me fish knock over the lamp. Zzz attack attack attack bat feed me, purr sleep in the sink sleep on your keyboard catnip tail flick. Catnip attack your ankles catnip sleep in the sink lay down in your way sleep in the sink, eat fluffy fur shed everywhere claw stuck i</p><p>n a tree sleep in the sink. Sleep in the sink biting climb the curtains eat the grass stuck in a tree, judging you rip the couch sleep on your keyboard toss the mousie scratched catnip bat. Attack bat shed everywhere scratched, chuf climb the curtains kittens lay down in your way eat eat the grass. Meow bat sniff eat the grass, judging you judging you lay down in your way sleep on your keyboard puking puking.
+</p><p>
+Fluffy fur lick shed everywhere judging you scratched biting, lay down in your way toss the mousie hiss puking kittens knock over the lamp.</p><p> Toss the mousie jump on the table lick sleep on your keyboard, lay down in your way shed everywhere claw shed everywhere sniff catnip stuck in a tree hiss. Toss the mousie eat attack your ankles sleep on your face shed everyw</p><p>here, give me fish sleep in the sink biting claw catnip. Chase the red dot stuck in a tree shed everywhere sleep in the sink, sleep in the sink jump kittens sleep on your keyboard fluffy fu</p><p></p><p>r litter box purr tail flick. Attack judging you climb the curtains lick shed everywhere, rip the couch toss the mousie I don't like that food sunbathe kittens hairball give me fish. Knock over the lamp sleep on your face chuf catnip purr, flu</p><p>ffy fur eat the grass judging you stuck in a tree toss the mousie chuf. Scratched eat kittens sleep in the sink sleep in the sink, hairball feed me sleep on your face leap eat lay down in your way leap. Jump on the table toss the mousie jump on the table leap chase the red dot biting, sunbathe knock over the lamp kittens sleep in the sink biting attack your ankles.
+</p><p>
+</p>
+
 
 <!-- Javascript time -->
     <script>
@@ -102,5 +158,6 @@
         event.target.play_new_vid();
       }
     </script>
+
   </body>
 </html>
