--- a/index.html
+++ b/index.html
@@ -3,25 +3,20 @@
 <head>
 
   <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700' rel='stylesheet' type='text/css'>
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
   <meta charset="utf-8" />
   <title>Scopitone Jukebox</title>
 
-
 <!--   <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.css" /> -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-  <link rel="stylesheet" type="text/css" href="css/scrolling.css" />
+  <link rel="stylesheet" type="text/css" href="css/scrolling_test.scss" />
 
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js">
   </script>
   <script src="js/scrolling.js" type="text/javascript" ></script>
 
-
-
 </head>
-
 
 <!-- Fixed navbar -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
