--- a/index.html
+++ b/index.html
@@ -7,61 +7,29 @@
   <meta charset="utf-8" />
   <title>Scopitone Jukebox</title>
 
-<!--   <link rel="stylesheet" type="text/css" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.css" /> -->
 <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-  <link rel="stylesheet" type="text/css" href="css/scrolling_test.scss" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
 
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js">
   </script>
-  <script src="js/scrolling.js" type="text/javascript" ></script>
 
 </head>
-
-<!-- Fixed navbar -->
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <div class="small-logo-container">
-            <a class="small-logo" href="#">Scopitone Jukebox</a>
-          </div>
-        </div>
-        <div class="navbar-collapse collapse">
-          
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a href="#">Active</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-            <li><a href="#">Link</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-    <div class="container-fluid big-logo-row">
+    <div id="chevron">
       <div class="container">
         <div class="row">
-          <div class="col-xs-12 big-logo-container">
-            <h1 class="big-logo">Scopitone Jukebox</h1>
-          </div><!--/.col-xs-12 -->
-        </div><!--/.row -->
-      </div><!--/.container -->
-    </div><!--/.container-fluid -->
-
+            <h1>Scopitone Jukebox</h1>
+          </div>
+        </div>
+    </div>
 
   <body>
       <div id="wrapper">
         <div id="main">
-          <div class="video-container">
+<!--           <div class="video-container">
             <div id="player">
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
 
