--- a/index.html
+++ b/index.html
@@ -3,33 +3,34 @@
 <head>
 
   <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700' rel='stylesheet' type='text/css'>
-
   <meta charset="utf-8" />
+
   <title>Scopitone Jukebox</title>
 
-<link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
-<link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
 
   <script src="http://code.jquery.com/jquery-latest.min.js"></script>
   <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js">
   </script>
 
 </head>
-    <div id="chevron">
-      <div class="container">
-        <div class="row">
-            <h1>Scopitone Jukebox</h1>
-          </div>
-        </div>
-    </div>
 
-  <body>
+<body>
+
+    <div id="chevron"></div>
+    <div class="container">
+    <h1>Scopitone Jukebox</h1>
+  </div>
+
+
+
       <div id="wrapper">
         <div id="main">
-<!--           <div class="video-container">
+          <div class="video-container">
             <div id="player">
             </div>
-          </div> -->
+          </div>
         </div>
       </div>
 
