--- a/index.html
+++ b/index.html
@@ -18,23 +18,26 @@
 
 <body>
 
-    <div id="chevron"></div>
-    <div class="container">
-    <h1>Scopitone Jukebox</h1>
+<div class="center">
+  <div id="chevron"></div>
+    <div class="container">     
+      <div class="span12"> 
 
+        <h1>Scopitone Jukebox</h1>
 
-
-
-      <div id="wrapper">
-        <div id="main">
-          <div class="video-container">
-            <div id="player">
+        <div id="wrapper">
+          <div id="main">
+            <div class="video-container">
+              <div id="player">
+              </div>
             </div>
           </div>
         </div>
-      </div>
 
-  </div>
+      </div>
+    </div>
+</div>
+
 <!-- Javascript time -->
     <script>
 
