--- a/index.html
+++ b/index.html
@@ -7,21 +7,20 @@
 
   <title>Scopitone Jukebox</title>
 
-  <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="css/foundation.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-  <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-  <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js">
+  <script src="js/foundation.min.js">
   </script>
 
 </head>
 
 <body>
+<div id="chevron"></div> 
 
-<div class="center">
-  <div id="chevron"></div>
-  <div class="container">     
-    <div class="span12"> 
+  <div class="row">
+    <div class="small-16 medium-16 large-8 small-centered columns">
+      <div class="center">
 
       <h1>Scopitone Jukebox</h1>
 
@@ -35,10 +34,8 @@
       </div>
 
     </div>
-  </div>
-    
+    </div>
 </div>
-
 <!-- Javascript time -->
     <script>
 
