--- a/index.html
+++ b/index.html
@@ -16,11 +16,10 @@
 </head>
 
 <body>
-<div id="chevron"></div> 
-
+  <div id="chevron"></div> 
+  <div id="chevron2"></div> 
   <div class="row">
     <div class="small-16 medium-16 large-8 small-centered columns">
-      <div class="center">
 
       <h1>Scopitone Jukebox</h1>
 
@@ -35,7 +34,8 @@
 
     </div>
     </div>
-</div>
+
+
 <!-- Javascript time -->
     <script>
 
