--- a/index.html
+++ b/index.html
@@ -111,5 +111,10 @@
       }
     </script>
 
+    <br/><br/><br/><br/>
+  <div class="row" style="position:relative;">
+    <p>Made with <span style="color:red">♥</span> by <a href="https://github.com/ablwr">Ashley Blewer</a>!</p>
+  </div>
+
   </body>
 </html>
