hold on to that footer for now buddy

--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
     </script>
 
   <br/><br/><br/><br/>
-  <div class="row" style="position:relative;">
+<!--   <div class="row text-center" style="position:relative;">
     <p>Made with <span style="color:red">♥</span> by <a href="https://github.com/ablwr">Ashley Blewer</a>!</p>
-  </div>
+  </div> -->
 
   </body>
 </html>
