fiddling with reaching bottom of page

--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
 
       <h1>Scopitone Jukebox</h1>
 
+<!-- For testing -->
+  <br/><br/><br/><br/>
+    <br/><br/><br/><br/>
+      <br/><br/><br/><br/>
+       <br/><br/><br/><br/>
+             <br/><br/><br/><br/>
+               <br/><br/><br/><br/>
+                  <br/><br/><br/><br/>
+
       <div id="wrapper">
         <div id="main">
           <div class="video-container">
