--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
   <link rel="stylesheet" type="text/css" href="css/foundation.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-  <script src="js/foundation.min.js">
-  </script>
-  <script src="js/scrolling.js">
-  </script>
+  <script src="js/foundation.min.js"></script>
+  <script src="js/scrolling.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 
 </head>
 
