a big mix of functioning javascript

--- a/index.html
+++ b/index.html
@@ -10,13 +10,11 @@
   <link rel="stylesheet" type="text/css" href="css/foundation.css" />
   <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-  <script src="js/foundation.min.js"></script>
-  <script src="js/scrolling.js"></script>
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+
 
 </head>
-
 <body>
+
   <div id="chevron"></div> 
   <div id="chevron2"></div> 
   <div class="row">
@@ -37,8 +35,33 @@
     </div>
 
   <br/><br/><br/><br/>
-<!--   <div class="row text-center" style="position:relative;">
+
+<div id="contentSection">
+  <section class="image header">
+    <div class="backgroundImage" id="header"></div>
+  </section>
+  <section class="content">
+    <article>
+      <h2>Title</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </article>        
+  </section>
+  <section class="image">
+    <div class="backgroundImage" id="first"></div>
+  </section>      
+  
+  <footer>
+    <article>
     <p>Made with <span style="color:red">♥</span> by <a href="https://github.com/ablwr">Ashley Blewer</a>!</p>
-  </div> -->
-  </body>
+    </article>
+  </footer>        
+</div>
+
+  <script src="js/foundation.min.js"></script>
+  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="js/foundation/foundation.js"></script>
+  <script src="js/scrolling.js"></script>
+
+
+    </body>
 </html>
