a chevron attack, a chevron feast if you will

--- a/index.html
+++ b/index.html
@@ -11,21 +11,13 @@
   </head>
 
   <body>
-          <div id="chevron"></div> 
     <div id="contentSection">
             
 
       <section class="image header">
         <div class="backgroundImage" id="header"></div>
-
-
-      <div id="chevron2"></div> 
-
-      <div class="row">
-        <div class="small-16 medium-16 large-8 small-centered columns">
-          <h1>Scopitone Jukebox</h1>
-        </div>
-      </div>
+          <div id="chevron"></div> 
+          <div id="chevron2"></div> 
       </section>
 
       <section class="content">
@@ -41,10 +33,16 @@
           </div>
         </article>        
       </section>
+
+      <section class="content">
+        <div id="chevron"></div> 
+        <div id="chevron2"></div> 
+      </section>
+
       <section class="image">
         <div class="backgroundImage" id="first"></div>
-      </section>      
-      
+      </section>
+
       <footer>
         <article>
         <p>Made with <span style="color:red">♥</span> by <a href="https://github.com/ablwr">Ashley Blewer</a>!</p>
