--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Scopitone Jukebox</title>
 
-    <link href='http://fonts.googleapis.com/css?family=Lobster+Two:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="css/foundation.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
