--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="js/foundation/foundation.js"></script>
     <script src="js/scrolling.js"></script>
-
+    <script type="text/javascript" src="js/skrollr.min.js"></script>
+    <script type="text/javascript">
+    var s = skrollr.init();
+    </script>
   </body>
 </html>
