--- a/index.html
+++ b/index.html
@@ -1,59 +1,53 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Directive by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-  <head>
-    <title>Scopitone Jukebox</title>
+	<head>
+		<title>Scopitone</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
+	</head>
+	<body>
 
-    <link href='http://fonts.googleapis.com/css?family=Abril+Fatface' rel='stylesheet' type='text/css'>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" type="text/css" href="css/foundation.css" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
+		<!-- Header -->
+			<div id="header">
+				<span class="logo icon fa-film"></span>
+				<h1>Scopitone Jukebox</h1>
+				<p></p>
+			</div>
 
-  </head>
-
-  <body>
-    <div id="contentSection"> 
-      <section class="image header">
-        <div class="backgroundImage" id="header"></div>
-          <div id="chevron"></div> 
-          <div id="chevron2"></div> 
-      </section>
-
-      <section class="content">
-        <article>
-          <div id="wrapper">
-            <div id="main">
-              <div class="video-container">
-                <div id="player">
-                </div>
-              </div>
+		<!-- Main -->
+			<div id="main">
+				<header class="major container 75%">
+					<div class="video-container">
+            <div id="player">
             </div>
           </div>
-        </article>        
-      </section>
+				</header>
+			</div>
 
-      <section class="content">
-        <div id="chevron"></div> 
-        <div id="chevron2"></div> 
-      </section>
+		<!-- Footer -->
+			<div id="footer">
+				<div class="container 75%">
+					<ul class="copyright">
+						<li>&copy; Scopitone Jukebox. No rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</div>
 
-      <section class="image">
-        <div class="backgroundImage" id="first"></div>
-      </section>
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<script src="assets/js/main.js"></script>
 
-      <footer>
-        <article>
-        <p>Made with <span style="color:red">♥</span> by <a href="https://github.com/ablwr">Ashley Blewer</a>!</p>
-        </article>
-      </footer>        
-    </div>
-
-    <script src="js/foundation.min.js"></script>
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="js/foundation/foundation.js"></script>
-    <script src="js/scrolling.js"></script>
-    <script type="text/javascript" src="js/skrollr.min.js"></script>
-    <script type="text/javascript">
-    var s = skrollr.init();
-    </script>
-  </body>
+	</body>
 </html>
