--- a/index.html
+++ b/index.html
@@ -16,38 +16,37 @@
 	</head>
 	<body>
 
-		<!-- Header -->
-			<div id="header">
-				<span class="logo icon fa-film"></span>
-				<h1>Scopitone Jukebox</h1>
-				<p></p>
-			</div>
+		<div id="header">
+			<span class="logo icon fa-film"></span>
+			<h1>Scopitone Jukebox</h1>
+			<p></p>
+		</div>
 
-		<!-- Main -->
-			<div id="main">
-				<header class="major container 75%">
-					<div class="video-container">
-            <div id="player">
-            </div>
+		<div id="main">
+			<header class="major container 75%">
+				<div class="video-container">
+          <div id="player">
           </div>
-				</header>
-			</div>
+        </div>
+			</header>
+		</div>
 
-		<!-- Footer -->
-			<div id="footer">
-				<div class="container 75%">
-					<ul class="copyright">
-						<li>&copy; Scopitone Jukebox. No rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
+		<div id="footer">
+			<div class="container 75%">
+				<a href=""><button type="button" class="button" name="button">Another quarter!</button></a>
+				<ul class="copyright">
+					<li>&copy; <a href="http://www.ashleyblewer.com">@ablwr</a>. No rights reserved.</li>
+					<li>Vids: <a href="https://www.youtube.com/channel/UCvDkTjdqUl-jODhXkP5RVpQ">ScopitonesDotCom</a></li>
+					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+				</ul>
 			</div>
+		</div>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/skel.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
