--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<div class="container 75%">
 				<a href=""><button type="button" class="button" name="button">Another quarter!</button></a>
 				<ul class="copyright">
-					<li>&copy; <a href="http://www.ashleyblewer.com">@ablwr</a>. No rights reserved.</li>
+					<li>&copy; <a href="http://www.ashleyblewer.com">ablwr</a>. No rights reserved.</li>
 					<li>Vids: <a href="https://www.youtube.com/channel/UCvDkTjdqUl-jODhXkP5RVpQ">ScopitonesDotCom</a></li>
 					<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
